@@ -26,6 +26,9 @@
             <a class="one-line"
                href="#"
                tal:attributes="href string:${portal}/searchNoVolDoubles?portal_type:list=Volume&amp;portal_type:list=Issue&amp;sort_on=effective&amp;sort_order=reverse">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="11" height="14" viewBox="0 0 11 14">
+                  <path class="play-button" d="M10.812 7.242l-10.375 5.766q-0.18 0.102-0.309 0.023t-0.129-0.281v-11.5q0-0.203 0.129-0.281t0.309 0.023l10.375 5.766q0.18 0.102 0.18 0.242t-0.18 0.242z"></path>
+              </svg>
               <h2 i18n:translate="label_latest_review_journals">
                 Neueste Rezensionsteile online</h2>
             </a>
@@ -52,6 +55,9 @@
           <div class="box right_box">
             <a class="one-line"
                tal:attributes="href string:${portal}/search?portal_type:list=Review+Monograph&amp;portal_type:list=Review+Journal&amp;sort_on=effective&amp;sort_order=reverse">
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="11" height="14" viewBox="0 0 11 14">
+                  <path class="play-button" d="M10.812 7.242l-10.375 5.766q-0.18 0.102-0.309 0.023t-0.129-0.281v-11.5q0-0.203 0.129-0.281t0.309 0.023l10.375 5.766q0.18 0.102 0.18 0.242t-0.18 0.242z"></path>
+              </svg>
               <h2 i18n:translate="label_latest_reviews">
                 Neueste Rezensionen online</h2>
             </a>
