@@ -5,7 +5,6 @@
     <title>recensio.net</title>
     <base></base>
     <meta name="viewport" content="width=device-width, maximum-scale=1.5">
-    <script src="https://use.fontawesome.com/a473456dca.js"></script>
   </head>
   <body>
 
